Hardening ingestion pipeline: transactional worker claiming, state-safe validation, and parsing robustness